<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TypographyFragment">

    <TextView
        android:id="@+id/textTypography"
        style="@style/sectionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:outlineAmbientShadowColor="#757575"
        android:paddingHorizontal="15dp"
        android:text="Typography"
        android:textAlignment="textStart"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/typefaceLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTypeface"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/typeface_icon"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Typeface" />

        <TextView
            android:id="@+id/textCurrentTypeface"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Monospace"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fontSizeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFontSize"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/fontsize_icon"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Font Size" />

        <TextView
            android:id="@+id/textCurrentFontSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Small"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineHeightLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textLineHeight"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/lineheight_icon"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Line Height" />

        <TextView
            android:id="@+id/textCurrentLineHeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="1.0"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/letterSpacingLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textLetterSpacing"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/linewidth_icon"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Letter Spacing" />

        <TextView
            android:id="@+id/textCurrentLetterSpacing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="0.0"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</LinearLayout>