<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemeFragment">

    <TextView
        android:id="@+id/textTheme"
        style="@style/sectionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:outlineAmbientShadowColor="#757575"
        android:paddingHorizontal="15dp"
        android:text="Theme"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/dayNightLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDayNight"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/darklight_icon"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Day/Night" />

        <TextView
            android:id="@+id/textCurrentDayNight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="Day"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</LinearLayout>